workloads/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: http
      protocol: TCP
      name: http
