workloads/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.home.drewdevlab.com`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: wildcard-home-tls
